[project]
name = "truss"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "litellm[proxy]>=1.72.4",
    "temporalio>=1.12.0",
    "pydantic>=2.5",
    "pytest>=8.2",
    "SQLAlchemy>=2.0",
    "alembic>=1.16",
    "anyio>=4.0",
]
